# KNN_simple_polarimeter

./: CMakeLists.txt  KNN_simple_polarimeter.cc  README  analysis.cc  gui.mac  init_vis.mac  run.mac  run10M.mac  vis.mac
analysis_include/: DrawTools.h  MyConstants.h  analysis_functions.hh  resolution_functions.hh
analysis_src/: analysis_functions.cc  resolution_functions.cc
include/: ActionInitialization.hh  Analysis.hh  Constants.hh  DetectorConstruction.hh  DriftChamberHit.hh  DriftChamberSD.hh  EventAction.hh  KppGenerator.hh  KppGeneratorCommon.hh  PrimaryGeneratorAction.hh  ProtonScatteringWithSpin.hh  RootFileManager.hh  RunAction.hh  SteppingAction.hh  TrackInformation.hh
macro/: Analysis.C  MyConstants.h  gui.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  DriftChamberHit.cc  DriftChamberSD.cc  EventAction.cc  KppGenerator.cc  LambdaDecay.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  ProtonScatteringWithSpin.cc  RootFileManager.cc  RunAction.cc  SolenoidMagneticField.cc  StackingAction.cc  SteppingAction.cc  TrackInformation.cc  TrackingAction.cc
